# CustomGameEngine

./: CMakeLists.txt
engine/: CMakeLists.txt
engine/source/: Application.cpp  Application.h  Common.h  Engine.cpp  Engine.h  eng.h
engine/source/audio/: Audio.cpp  Audio.h  AudioManager.cpp  AudioManager.h
engine/source/font/: Font.cpp  Font.h  FontManager.cpp  FontManager.h
engine/source/graphics/: GraphicsAPI.cpp  GraphicsAPI.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexLayout.h
engine/source/input/: InputManager.cpp  InputManager.h
engine/source/io/: FileSystem.cpp  FileSystem.h
engine/source/physics/: Collider.cpp  Collider.h  CollisionObject.cpp  CollisionObject.h  KinematicCharacterController.cpp  KinematicCharacterController.h  PhysicsManager.cpp  PhysicsManager.h  RigidBody.cpp  RigidBody.h
engine/source/render/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderQueue.cpp  RenderQueue.h
engine/source/scene/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
engine/source/scene/components/: AnimationComponent.cpp  AnimationComponent.h  AudioComponent.cpp  AudioComponent.h  AudioListenerComponent.cpp  AudioListenerComponent.h  CameraComponent.cpp  CameraComponent.h  LightComponent.cpp  LightComponent.h  MeshComponent.cpp  MeshComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  PlayerControllerComponent.cpp  PlayerControllerComponent.h  SpriteComponent.cpp  SpriteComponent.h
engine/source/scene/components/ui/: CanvasComponent.cpp  CanvasComponent.h  TextComponent.cpp  TextComponent.h  (+1 more)
(+27 files in other folders)
